--- a/package.json
+++ b/package.json
@@ -2,256 +2,107 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
-    "@polymer/iron-icon": "3.0.1",
-    "@polymer/iron-iconset-svg": "3.0.1",
-    "@polymer/iron-list": "3.1.0",
-    "@polymer/iron-meta": "3.0.1",
-    "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.5.1",
-    "@vaadin/accordion": "23.3.15",
-    "@vaadin/app-layout": "23.3.15",
-    "@vaadin/avatar": "23.3.15",
-    "@vaadin/avatar-group": "23.3.15",
-    "@vaadin/bundles": "23.3.15",
-    "@vaadin/button": "23.3.15",
-    "@vaadin/checkbox": "23.3.15",
-    "@vaadin/checkbox-group": "23.3.15",
-    "@vaadin/combo-box": "23.3.15",
-    "@vaadin/common-frontend": "0.0.18",
-    "@vaadin/component-base": "23.3.15",
-    "@vaadin/confirm-dialog": "23.3.15",
-    "@vaadin/context-menu": "23.3.15",
-    "@vaadin/cookie-consent": "23.3.15",
-    "@vaadin/custom-field": "23.3.15",
-    "@vaadin/date-picker": "23.3.15",
-    "@vaadin/date-time-picker": "23.3.15",
-    "@vaadin/details": "23.3.15",
-    "@vaadin/dialog": "23.3.15",
-    "@vaadin/email-field": "23.3.15",
-    "@vaadin/field-base": "23.3.15",
-    "@vaadin/field-highlighter": "23.3.15",
-    "@vaadin/form-layout": "23.3.15",
-    "@vaadin/grid": "23.3.15",
-    "@vaadin/horizontal-layout": "23.3.15",
-    "@vaadin/icon": "23.3.15",
-    "@vaadin/icons": "23.3.15",
-    "@vaadin/input-container": "23.3.15",
-    "@vaadin/integer-field": "23.3.15",
-    "@vaadin/item": "23.3.15",
-    "@vaadin/list-box": "23.3.15",
-    "@vaadin/lit-renderer": "23.3.15",
-    "@vaadin/login": "23.3.15",
-    "@vaadin/menu-bar": "23.3.15",
-    "@vaadin/message-input": "23.3.15",
-    "@vaadin/message-list": "23.3.15",
-    "@vaadin/multi-select-combo-box": "23.3.15",
-    "@vaadin/notification": "23.3.15",
-    "@vaadin/number-field": "23.3.15",
-    "@vaadin/password-field": "23.3.15",
-    "@vaadin/polymer-legacy-adapter": "23.3.15",
-    "@vaadin/progress-bar": "23.3.15",
-    "@vaadin/radio-group": "23.3.15",
+    "@vaadin/bundles": "24.4.9",
+    "@vaadin/common-frontend": "0.0.19",
+    "@vaadin/cookie-consent": "24.4.9",
+    "@vaadin/polymer-legacy-adapter": "24.4.9",
+    "@vaadin/react-components": "24.4.9",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "23.3.15",
-    "@vaadin/select": "23.3.15",
-    "@vaadin/split-layout": "23.3.15",
-    "@vaadin/tabs": "23.3.15",
-    "@vaadin/tabsheet": "23.3.15",
-    "@vaadin/text-area": "23.3.15",
-    "@vaadin/text-field": "23.3.15",
-    "@vaadin/time-picker": "23.3.15",
-    "@vaadin/tooltip": "23.3.15",
-    "@vaadin/upload": "23.3.15",
-    "@vaadin/vaadin-accordion": "23.3.15",
-    "@vaadin/vaadin-app-layout": "23.3.15",
-    "@vaadin/vaadin-avatar": "23.3.15",
-    "@vaadin/vaadin-button": "23.3.15",
-    "@vaadin/vaadin-checkbox": "23.3.15",
-    "@vaadin/vaadin-combo-box": "23.3.15",
-    "@vaadin/vaadin-confirm-dialog": "23.3.15",
-    "@vaadin/vaadin-context-menu": "23.3.15",
-    "@vaadin/vaadin-cookie-consent": "23.3.15",
-    "@vaadin/vaadin-custom-field": "23.3.15",
-    "@vaadin/vaadin-date-picker": "23.3.15",
-    "@vaadin/vaadin-date-time-picker": "23.3.15",
-    "@vaadin/vaadin-details": "23.3.15",
-    "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-dialog": "23.3.15",
-    "@vaadin/vaadin-form-layout": "23.3.15",
-    "@vaadin/vaadin-grid": "23.3.15",
-    "@vaadin/vaadin-icon": "23.3.15",
-    "@vaadin/vaadin-icons": "23.3.15",
-    "@vaadin/vaadin-item": "23.3.15",
-    "@vaadin/vaadin-list-box": "23.3.15",
-    "@vaadin/vaadin-list-mixin": "23.3.15",
-    "@vaadin/vaadin-login": "23.3.15",
-    "@vaadin/vaadin-lumo-styles": "23.3.15",
-    "@vaadin/vaadin-material-styles": "23.3.15",
-    "@vaadin/vaadin-menu-bar": "23.3.15",
-    "@vaadin/vaadin-messages": "23.3.15",
-    "@vaadin/vaadin-notification": "23.3.15",
-    "@vaadin/vaadin-ordered-layout": "23.3.15",
-    "@vaadin/vaadin-overlay": "23.3.15",
-    "@vaadin/vaadin-progress-bar": "23.3.15",
-    "@vaadin/vaadin-radio-button": "23.3.15",
-    "@vaadin/vaadin-select": "23.3.15",
-    "@vaadin/vaadin-split-layout": "23.3.15",
-    "@vaadin/vaadin-tabs": "23.3.15",
-    "@vaadin/vaadin-template-renderer": "23.3.15",
-    "@vaadin/vaadin-text-field": "23.3.15",
-    "@vaadin/vaadin-themable-mixin": "23.3.15",
-    "@vaadin/vaadin-time-picker": "23.3.15",
-    "@vaadin/vaadin-upload": "23.3.15",
-    "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vaadin-virtual-list": "23.3.15",
-    "@vaadin/vertical-layout": "23.3.15",
-    "@vaadin/virtual-list": "23.3.15",
+    "@vaadin/vaadin-development-mode-detector": "2.0.7",
+    "@vaadin/vaadin-lumo-styles": "24.4.9",
+    "@vaadin/vaadin-material-styles": "24.4.9",
+    "@vaadin/vaadin-themable-mixin": "24.4.9",
+    "@vaadin/vaadin-usage-statistics": "2.1.3",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.6.1"
+    "lit": "3.1.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.26.2"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "3.1.0",
-    "@rollup/pluginutils": "4.1.0",
-    "async": "3.2.2",
-    "glob": "7.2.3",
-    "mkdirp": "1.0.4",
+    "@babel/preset-react": "7.24.7",
+    "@rollup/plugin-replace": "5.0.7",
+    "@rollup/pluginutils": "5.1.0",
+    "@types/react": "18.3.4",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "async": "3.2.6",
+    "glob": "10.4.5",
     "rollup-plugin-brotli": "3.1.0",
+    "rollup-plugin-visualizer": "5.12.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "4.9.5",
-    "vite": "3.2.7",
-    "vite-plugin-checker": "0.5.4",
-    "workbox-build": "6.5.4",
-    "workbox-core": "6.5.4",
-    "workbox-precaching": "6.5.4"
+    "typescript": "5.4.5",
+    "vite": "5.4.2",
+    "vite-plugin-checker": "0.6.4",
+    "workbox-build": "7.1.1",
+    "workbox-core": "7.1.0",
+    "workbox-precaching": "7.1.0"
   },
   "vaadin": {
     "dependencies": {
-      "@polymer/iron-icon": "3.0.1",
-      "@polymer/iron-iconset-svg": "3.0.1",
-      "@polymer/iron-list": "3.1.0",
-      "@polymer/iron-meta": "3.0.1",
-      "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.5.1",
-      "@vaadin/accordion": "23.3.15",
-      "@vaadin/app-layout": "23.3.15",
-      "@vaadin/avatar": "23.3.15",
-      "@vaadin/avatar-group": "23.3.15",
-      "@vaadin/bundles": "23.3.15",
-      "@vaadin/button": "23.3.15",
-      "@vaadin/checkbox": "23.3.15",
-      "@vaadin/checkbox-group": "23.3.15",
-      "@vaadin/combo-box": "23.3.15",
-      "@vaadin/common-frontend": "0.0.18",
-      "@vaadin/component-base": "23.3.15",
-      "@vaadin/confirm-dialog": "23.3.15",
-      "@vaadin/context-menu": "23.3.15",
-      "@vaadin/cookie-consent": "23.3.15",
-      "@vaadin/custom-field": "23.3.15",
-      "@vaadin/date-picker": "23.3.15",
-      "@vaadin/date-time-picker": "23.3.15",
-      "@vaadin/details": "23.3.15",
-      "@vaadin/dialog": "23.3.15",
-      "@vaadin/email-field": "23.3.15",
-      "@vaadin/field-base": "23.3.15",
-      "@vaadin/field-highlighter": "23.3.15",
-      "@vaadin/form-layout": "23.3.15",
-      "@vaadin/grid": "23.3.15",
-      "@vaadin/horizontal-layout": "23.3.15",
-      "@vaadin/icon": "23.3.15",
-      "@vaadin/icons": "23.3.15",
-      "@vaadin/input-container": "23.3.15",
-      "@vaadin/integer-field": "23.3.15",
-      "@vaadin/item": "23.3.15",
-      "@vaadin/list-box": "23.3.15",
-      "@vaadin/lit-renderer": "23.3.15",
-      "@vaadin/login": "23.3.15",
-      "@vaadin/menu-bar": "23.3.15",
-      "@vaadin/message-input": "23.3.15",
-      "@vaadin/message-list": "23.3.15",
-      "@vaadin/multi-select-combo-box": "23.3.15",
-      "@vaadin/notification": "23.3.15",
-      "@vaadin/number-field": "23.3.15",
-      "@vaadin/password-field": "23.3.15",
-      "@vaadin/polymer-legacy-adapter": "23.3.15",
-      "@vaadin/progress-bar": "23.3.15",
-      "@vaadin/radio-group": "23.3.15",
+      "@vaadin/bundles": "24.4.9",
+      "@vaadin/common-frontend": "0.0.19",
+      "@vaadin/cookie-consent": "24.4.9",
+      "@vaadin/polymer-legacy-adapter": "24.4.9",
+      "@vaadin/react-components": "24.4.9",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "23.3.15",
-      "@vaadin/select": "23.3.15",
-      "@vaadin/split-layout": "23.3.15",
-      "@vaadin/tabs": "23.3.15",
-      "@vaadin/tabsheet": "23.3.15",
-      "@vaadin/text-area": "23.3.15",
-      "@vaadin/text-field": "23.3.15",
-      "@vaadin/time-picker": "23.3.15",
-      "@vaadin/tooltip": "23.3.15",
-      "@vaadin/upload": "23.3.15",
-      "@vaadin/vaadin-accordion": "23.3.15",
-      "@vaadin/vaadin-app-layout": "23.3.15",
-      "@vaadin/vaadin-avatar": "23.3.15",
-      "@vaadin/vaadin-button": "23.3.15",
-      "@vaadin/vaadin-checkbox": "23.3.15",
-      "@vaadin/vaadin-combo-box": "23.3.15",
-      "@vaadin/vaadin-confirm-dialog": "23.3.15",
-      "@vaadin/vaadin-context-menu": "23.3.15",
-      "@vaadin/vaadin-cookie-consent": "23.3.15",
-      "@vaadin/vaadin-custom-field": "23.3.15",
-      "@vaadin/vaadin-date-picker": "23.3.15",
-      "@vaadin/vaadin-date-time-picker": "23.3.15",
-      "@vaadin/vaadin-details": "23.3.15",
-      "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-dialog": "23.3.15",
-      "@vaadin/vaadin-form-layout": "23.3.15",
-      "@vaadin/vaadin-grid": "23.3.15",
-      "@vaadin/vaadin-icon": "23.3.15",
-      "@vaadin/vaadin-icons": "23.3.15",
-      "@vaadin/vaadin-item": "23.3.15",
-      "@vaadin/vaadin-list-box": "23.3.15",
-      "@vaadin/vaadin-list-mixin": "23.3.15",
-      "@vaadin/vaadin-login": "23.3.15",
-      "@vaadin/vaadin-lumo-styles": "23.3.15",
-      "@vaadin/vaadin-material-styles": "23.3.15",
-      "@vaadin/vaadin-menu-bar": "23.3.15",
-      "@vaadin/vaadin-messages": "23.3.15",
-      "@vaadin/vaadin-notification": "23.3.15",
-      "@vaadin/vaadin-ordered-layout": "23.3.15",
-      "@vaadin/vaadin-overlay": "23.3.15",
-      "@vaadin/vaadin-progress-bar": "23.3.15",
-      "@vaadin/vaadin-radio-button": "23.3.15",
-      "@vaadin/vaadin-select": "23.3.15",
-      "@vaadin/vaadin-split-layout": "23.3.15",
-      "@vaadin/vaadin-tabs": "23.3.15",
-      "@vaadin/vaadin-template-renderer": "23.3.15",
-      "@vaadin/vaadin-text-field": "23.3.15",
-      "@vaadin/vaadin-themable-mixin": "23.3.15",
-      "@vaadin/vaadin-time-picker": "23.3.15",
-      "@vaadin/vaadin-upload": "23.3.15",
-      "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vaadin-virtual-list": "23.3.15",
-      "@vaadin/vertical-layout": "23.3.15",
-      "@vaadin/virtual-list": "23.3.15",
+      "@vaadin/vaadin-development-mode-detector": "2.0.7",
+      "@vaadin/vaadin-lumo-styles": "24.4.9",
+      "@vaadin/vaadin-material-styles": "24.4.9",
+      "@vaadin/vaadin-themable-mixin": "24.4.9",
+      "@vaadin/vaadin-usage-statistics": "2.1.3",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.6.1"
+      "lit": "3.1.4",
+      "react": "18.3.1",
+      "react-dom": "18.3.1",
+      "react-router-dom": "6.26.2"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "3.1.0",
-      "@rollup/pluginutils": "4.1.0",
-      "async": "3.2.2",
-      "glob": "7.2.3",
-      "mkdirp": "1.0.4",
+      "@babel/preset-react": "7.24.7",
+      "@rollup/plugin-replace": "5.0.7",
+      "@rollup/pluginutils": "5.1.0",
+      "@types/react": "18.3.4",
+      "@types/react-dom": "18.3.0",
+      "@vitejs/plugin-react": "4.3.1",
+      "async": "3.2.6",
+      "glob": "10.4.5",
       "rollup-plugin-brotli": "3.1.0",
+      "rollup-plugin-visualizer": "5.12.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "4.9.5",
-      "vite": "3.2.7",
-      "vite-plugin-checker": "0.5.4",
-      "workbox-build": "6.5.4",
-      "workbox-core": "6.5.4",
-      "workbox-precaching": "6.5.4"
+      "typescript": "5.4.5",
+      "vite": "5.4.2",
+      "vite-plugin-checker": "0.6.4",
+      "workbox-build": "7.1.1",
+      "workbox-core": "7.1.0",
+      "workbox-precaching": "7.1.0"
     },
-    "hash": "63e680ce77be0f663672748f6cade75b6c2a574288a3017d18b62d511806f76c"
+    "hash": "a8e10e00d4bde9309f0b39e206b4c22bf37b6692e17bbad65377f0ba1a76e036"
+  },
+  "type": "module",
+  "overrides": {
+    "@vaadin/bundles": "$@vaadin/bundles",
+    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
+    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
+    "@vaadin/router": "$@vaadin/router",
+    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
+    "@vaadin/react-components": "$@vaadin/react-components",
+    "@polymer/polymer": "$@polymer/polymer",
+    "@vaadin/common-frontend": "$@vaadin/common-frontend",
+    "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
+    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
+    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+    "date-fns": "$date-fns",
+    "lit": "$lit",
+    "react-dom": "$react-dom",
+    "react-router-dom": "$react-router-dom",
+    "react": "$react"
   }
 }
